# esa-beamforming

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: ci.yml
array_engine/: __init__.py  analysis.py  geolocation.py  geometry.py  models.py  nulling.py  pattern.py  steering.py
backend/: pyproject.toml
backend/app/: main.py  routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  react-plotly.d.ts  types.ts
tests/: conftest.py  test_api.py  test_geolocation.py  test_geometry.py  test_golden.py  test_null_depth_analysis.py  test_nulling.py  test_pattern.py  test_quantization.py  test_steering.py
