[project]
name = "esa-beamforming-backend"
version = "0.1.0"
description = "FastAPI backend for ESA beamforming app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.uv]
package = false

# ── pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-q --tb=short"

# ── ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "../array_engine", "../tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",    # line-length handled by formatter
    "RUF002",  # ambiguous unicode — intentional math symbols (×, −) in docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["array_engine", "app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
mypy_path = [".."]
packages = ["array_engine", "app"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
